--- a/core/design-system/src/main/res/layout/expo_toast.xml
+++ b/core/design-system/src/main/res/layout/expo_toast.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/pretendard_regular"
-        android:text="성공하였습니다!"
+        android:text=""
         android:textColor="@color/gray90"
         android:textSize="16sp"/>
 
